# NanoNet

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  DoS_SiNW.py  LICENSE  MANIFEST.in  README.md  SiNWfunction.py  SiNWtest.py  band_structure.py  hamiltonianSiNW.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/: .gitattributes
docs/: Makefile  README.md  index.html
examples/: __init__.py  bi_bilayer.py  bi_bulk.py  bi_nanoribbon.py  bi_nanoribbon_projected.py  bi_nanoribbon_transport.py  bi_nanoribbon_transport_mpi.py  bi_nanoribbon_transport_scf.py  carbons.py  carbons_allotropes.py  data_bi_bilayer.py  data_bi_bulk.py  data_bi_nanoribbon.py  data_si_bulk.py  dichalcogenides.py  examples_for_matrix_splitting.py  graphene_bilayer.py  graphene_bilayer_rect.py  graphene_strain.py  hamiltonian_simple.py  hilbert_example.py  nanostrip.py  pole_and_int_comparison.py  pole_and_int_comparison_2.py  poletest.py  poletest2.py  prototypeexample.py  prototypeexample2.py  si_bulk.py  si_bulk_projected.py  si_bulk_symbolic.py  si_nw.py  si_nw1.py  si_nw_band_structure.py  si_nw_transmission.py  si_nw_transmission_blocks.py  surf_greens_function.py  test.py  tunnel_diode.py
input_samples/: SiNW.xyz  SiNW3.xyz  SiNW4.xyz  SiNW7.xyz  SiNW8.xyz  SiNW_large.xyz  bi_bilayer.xyz  bi_nanoribbon_014.xyz  bi_nanoribbon_058.xyz  input.yaml
jupyter_notebooks/: Hukel model.ipynb  Hukel_model.ipynb  Untitled.ipynb  atom_chains.ipynb  bismuth_bulk.ipynb  block_tridiagonal_and_sorting.ipynb  bulk_silicon.ipynb  bulk_silicon_with_input_file.ipynb  chain_greens_function.ipynb  nanostrip.ipynb  silicon nanowire.ipynb  silicon_nanowire.ipynb  symbolic_computations.ipynb
nanonet/: config.py
negf/: __init__.py  aux_functions.py  cfr.py  continued_fraction_representation.py  field.py  greens_functions.py  hamiltonian_chain.py  invdisttree.py  poisson.py  recursive_greens_functions.py  surf_greens_function.py  transport.py
src/: abstract_interfaces.py  aux_functions.py  diatomic_matrix_element.py  hamiltonian.py  params.py  structure_designer.py
tb/: __init__.py  abstract_interfaces.py  atoms.py  constants.py  (+25 more)
(+93 files in other folders)
